--- a/templates/leeptyBoxContainer.ejs
+++ b/templates/leeptyBoxContainer.ejs
@@ -1,6 +1,4 @@
 <div id="<%=this.contenerId%>" class="leeptyWidget leeptyBox">
 	<div class="leeptyHeader"><%= lang.relatedPost %></div>
-	<ul class="leeptyList">
-
-	</ul>
+	<ul class="leeptyList"></ul>
 </div>
