--- a/templates/leeptySidebarContainer.ejs
+++ b/templates/leeptySidebarContainer.ejs
@@ -1,8 +1,6 @@
 <div id="<%=this.contenerId%>" class="leeptyWidget leeptySidebar">
 	<div class="leeptyContent">
 		<div class="leeptyHeader"><%= lang.relatedPost %></div>
-		<ul class="leeptyList">
-
-		</ul>
+		<div class="lwScroller"><ul class="leeptyList"></ul></div>
 	</div>
 </div>
